--- a/StoreAndDeliverUI/package.json
+++ b/StoreAndDeliverUI/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.2.0",
@@ -22,6 +23,7 @@
     "@angular/router": "~12.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/googlemaps": "^3.43.3",
     "lodash": "^4.17.21",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
