--- a/StoreAndDeliverUI/package.json
+++ b/StoreAndDeliverUI/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@swimlane/ngx-charts": "^20.1.0",
     "@types/googlemaps": "^3.43.3",
     "guid-typescript": "^1.0.9",
     "lodash": "^4.17.21",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "~12.2.11",
     "@angular/cli": "~12.2.11",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.176",
     "@types/node": "^12.11.1",
